--- a/401.html
+++ b/401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6566939b5fd911cd663cc863" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
   <div class="utility-page-wrap">
     <div class="utility-page-content w-password-page w-form">
       <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="utility-page-form w-password-page" data-wf-page-id="6566939b5fd911cd663cc863" data-wf-element-id="6566939b5fd911cd663cc86900000000000c"><img src="https://d3e54v103j8qbb.cloudfront.net/static/utility-lock.ae54711958.svg" alt="">
-        <h2>Protected Page</h2><label for="pass" class="w-password-page">Password</label><input type="password" class="w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="pass"><input type="submit" value="Submit" data-wait="Please wait..." class="w-password-page w-button">
+        <h2>Protected Page</h2><label for="pass" class="w-password-page">Password</label><input class="w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" type="password" id="pass"><input type="submit" data-wait="Please wait..." class="w-password-page w-button" value="Submit">
         <div class="w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
         </div>
