--- a/case-studies.html
+++ b/case-studies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -42,6 +42,7 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" aria-current="page" class="nav-dropdown-link w-dropdown-link w--current">Case Studies</a>
+                    <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-dropdown-link w-dropdown-link">Wiki</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
@@ -105,14 +106,14 @@
           <p class="paragraph-2">Resonite’s technology makes it not just easy to stream live content, but also gives the ability to create versatile and interactive productions. Tweak your stage on the fly, have a team off camera control lighting and cameras, pipe in audience chat commands to trigger events in your session. The possibilities are endless!</p>
           <a href="case-studies/live-production.html" class="button-primary w-button">Learn More</a>
         </div>
-        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="100vw" srcset="images/The-6th-Annual-VR-Awards.jpg 500w, images/The-6th-Annual-VR-Awards.jpg 800w, images/The-6th-Annual-VR-Awards.jpg 1080w, images/The-6th-Annual-VR-Awards.jpg 1600w, images/The-6th-Annual-VR-Awards.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/The-6th-Annual-VR-Awards-p-500.jpg 500w, images/The-6th-Annual-VR-Awards-p-800.jpg 800w, images/The-6th-Annual-VR-Awards-p-1080.jpg 1080w, images/The-6th-Annual-VR-Awards-p-1600.jpg 1600w, images/The-6th-Annual-VR-Awards-p-2000.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
   <section class="hero-heading-right-copy">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/CaseStudies_Education_01.jpg" loading="lazy" sizes="100vw" srcset="images/CaseStudies_Education_01-p-500.jpg 500w, images/CaseStudies_Education_01-p-800.jpg 800w, images/CaseStudies_Education_01-p-1080.jpg 1080w, images/CaseStudies_Education_01-p-1600.jpg 1600w, images/CaseStudies_Education_01-p-2000.jpg 2000w, images/CaseStudies_Education_01.jpg 2560w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split"><img src="images/CaseStudies_Education_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/CaseStudies_Education_01-p-500.jpg 500w, images/CaseStudies_Education_01-p-800.jpg 800w, images/CaseStudies_Education_01-p-1080.jpg 1080w, images/CaseStudies_Education_01-p-1600.jpg 1600w, images/CaseStudies_Education_01-p-2000.jpg 2000w, images/CaseStudies_Education_01.jpg 2560w" alt="" class="shadow-two-3"></div>
         <div class="hero-split">
           <h2 class="heading-8">Education</h2>
           <p class="margin-bottom-24px">Resonite can be used in the classroom environment. Anyone can create custom teaching module experiences. Experience the surface of other celestial bodies through 3D scanned imagery, learn to identify coral reef health, maybe even teach a course in visual scripting via Protoflux.</p>
