--- a/case-studies/live-production.html
+++ b/case-studies/live-production.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="657cc7a03513dccd2c642647" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -42,6 +42,7 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
+                    <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-dropdown-link w-dropdown-link">Wiki</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
@@ -128,16 +129,16 @@
         <div data-delay="4000" data-animation="slide" class="gallery-slide w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="true" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true" id="w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b3b-2c642647">
           <div class="w-slider-mask">
             <div class="gallery-slide-wrapper w-slide">
-              <div class="gallery-slide-image"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" srcset="../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png 500w, ../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png 800w, ../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png 1080w, ../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png 1382w" src="../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png" loading="lazy" alt="" class="gallery-image"></div>
+              <div class="gallery-slide-image"><img sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" srcset="../images/Cello-climbs-with-ease-in-the-Kelosite-Lab-p-500.png 500w, ../images/Cello-climbs-with-ease-in-the-Kelosite-Lab-p-800.png 800w, ../images/Cello-climbs-with-ease-in-the-Kelosite-Lab-p-1080.png 1080w, ../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png 1382w" src="../images/Cello-climbs-with-ease-in-the-Kelosite-Lab.png" loading="lazy" alt="" class="gallery-image"></div>
             </div>
             <div class="gallery-slide-wrapper w-slide">
-              <div class="gallery-slide-image"><img id="w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b49-2c642647" sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" src="../images/Eyebots-debate-in-the-Plant-Lab.png" loading="lazy" alt="" srcset="../images/Eyebots-debate-in-the-Plant-Lab.png 500w, ../images/Eyebots-debate-in-the-Plant-Lab.png 800w, ../images/Eyebots-debate-in-the-Plant-Lab.png 1080w, ../images/Eyebots-debate-in-the-Plant-Lab.png 1229w" class="gallery-image"></div>
+              <div class="gallery-slide-image"><img id="w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b49-2c642647" sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" src="../images/Eyebots-debate-in-the-Plant-Lab.png" loading="lazy" alt="" srcset="../images/Eyebots-debate-in-the-Plant-Lab-p-500.png 500w, ../images/Eyebots-debate-in-the-Plant-Lab-p-800.png 800w, ../images/Eyebots-debate-in-the-Plant-Lab-p-1080.png 1080w, ../images/Eyebots-debate-in-the-Plant-Lab.png 1229w" class="gallery-image"></div>
             </div>
             <div class="gallery-slide-wrapper w-slide">
-              <div class="gallery-slide-image"><img id="w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b4e-2c642647" sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" src="../images/Baxter-makes-an-offer-in-the-Plant-Lab.png" loading="lazy" alt="" srcset="../images/Baxter-makes-an-offer-in-the-Plant-Lab.png 500w, ../images/Baxter-makes-an-offer-in-the-Plant-Lab.png 800w, ../images/Baxter-makes-an-offer-in-the-Plant-Lab.png 1080w, ../images/Baxter-makes-an-offer-in-the-Plant-Lab.png 1536w" class="gallery-image"></div>
+              <div class="gallery-slide-image"><img id="w-node-ad3f57aa-92c6-7d16-2d9a-4eac4abc1b4e-2c642647" sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" src="../images/Baxter-makes-an-offer-in-the-Plant-Lab.png" loading="lazy" alt="" srcset="../images/Baxter-makes-an-offer-in-the-Plant-Lab-p-500.png 500w, ../images/Baxter-makes-an-offer-in-the-Plant-Lab-p-800.png 800w, ../images/Baxter-makes-an-offer-in-the-Plant-Lab-p-1080.png 1080w, ../images/Baxter-makes-an-offer-in-the-Plant-Lab.png 1536w" class="gallery-image"></div>
             </div>
             <div class="gallery-slide-wrapper w-slide">
-              <div class="gallery-slide-image"><img id="w-node-_3651c072-cc9d-0d4f-5506-dd9772ee5754-2c642647" sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" src="../images/The-Blackhawk.png" loading="lazy" alt="" srcset="../images/The-Blackhawk.png 500w, ../images/The-Blackhawk.png 800w, ../images/The-Blackhawk.png 1080w, ../images/The-Blackhawk.png 1600w, ../images/The-Blackhawk.png 2000w, ../images/The-Blackhawk.png 2304w" class="gallery-image"></div>
+              <div class="gallery-slide-image"><img id="w-node-_3651c072-cc9d-0d4f-5506-dd9772ee5754-2c642647" sizes="(max-width: 479px) 100vw, (max-width: 991px) 20vw, 14vw" src="../images/The-Blackhawk.png" loading="lazy" alt="" srcset="../images/The-Blackhawk-p-500.png 500w, ../images/The-Blackhawk-p-800.png 800w, ../images/The-Blackhawk-p-1080.png 1080w, ../images/The-Blackhawk-p-1600.png 1600w, ../images/The-Blackhawk-p-2000.png 2000w, ../images/The-Blackhawk.png 2304w" class="gallery-image"></div>
             </div>
           </div>
           <div class="gallery-slider-left w-slider-arrow-left">
