--- a/experimental-pages/submit-an-event.html
+++ b/experimental-pages/submit-an-event.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6567b01217f49566a6f11676" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -91,7 +91,7 @@
       <div class="text-block-13">Submit an Event</div>
     </div>
     <div class="w-form">
-      <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="6567b01217f49566a6f11676" data-wf-element-id="5377326b-99e7-3205-59a0-783f54897237"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required=""><input type="submit" value="Submit" data-wait="Please wait..." class="w-button"></form>
+      <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="6567b01217f49566a6f11676" data-wf-element-id="5377326b-99e7-3205-59a0-783f54897237"><label for="name">Name</label><input class="w-input" maxlength="256" name="name" data-name="Name" placeholder="" type="text" id="name"><label for="email">Email Address</label><input class="w-input" maxlength="256" name="email" data-name="Email" placeholder="" type="email" id="email" required=""><input type="submit" data-wait="Please wait..." class="w-button" value="Submit"></form>
       <div class="w-form-done">
         <div>Thank you! Your submission has been received!</div>
       </div>
