--- a/style-guide.html
+++ b/style-guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77704" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -187,12 +187,12 @@
         </div>
         <div id="w-node-_983a314a-baad-360b-c27c-560bd790abd0-efa77704" class="style-guide-grid-item-wrap">
           <div id="w-node-dec986e8-2989-ac3d-9697-51959cdb817b-efa77704" class="w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="656504e52e383d09efa77704" data-wf-element-id="dec986e8-2989-ac3d-9697-51959cdb817c"><label for="name" class="form-lable">Text Input</label><input type="text" class="form-field w-input" maxlength="256" name="name" data-name="Name" placeholder="Example Text" id="name"><label for="field-2" class="form-lable">Text Area</label><textarea placeholder="Example Text" maxlength="5000" id="field-2" name="field-2" data-name="field" class="form-field form-text-area w-input"></textarea><label for="field" class="form-lable">Email Address</label><select id="field" name="field" data-name="Field" class="form-field form-select w-select">
+            <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="656504e52e383d09efa77704" data-wf-element-id="dec986e8-2989-ac3d-9697-51959cdb817c"><label for="name" class="form-lable">Text Input</label><input class="form-field w-input" maxlength="256" name="name" data-name="Name" placeholder="Example Text" type="text" id="name"><label for="field-2" class="form-lable">Text Area</label><textarea placeholder="Example Text" maxlength="5000" id="field-2" name="field-2" data-name="field" class="form-field form-text-area w-input"></textarea><label for="field" class="form-lable">Email Address</label><select id="field" name="field" data-name="Field" class="form-field form-select w-select">
                 <option value="">Select one...</option>
                 <option value="First">First choice</option>
                 <option value="Second">Second choice</option>
                 <option value="Third">Third choice</option>
-              </select><label for="email-2" class="form-lable">Email Address</label><label class="w-checkbox"><input type="checkbox" id="checkbox" name="checkbox" data-name="Checkbox" class="w-checkbox-input form-checkbox"><span class="w-form-label" for="checkbox">Checkbox</span></label><label for="email-2" class="form-lable">Email Address</label><label class="w-radio"><input type="radio" data-name="Radio" id="radio" name="radio" value="Radio" class="w-form-formradioinput form-radio w-radio-input"><span class="w-form-label" for="radio">Radio</span></label><input type="submit" value="Submit" data-wait="Please wait..." class="button form-submit w-button"></form>
+              </select><label for="email-2" class="form-lable">Email Address</label><label class="w-checkbox"><input type="checkbox" id="checkbox" name="checkbox" data-name="Checkbox" class="w-checkbox-input form-checkbox"><span class="w-form-label" for="checkbox">Checkbox</span></label><label for="email-2" class="form-lable">Email Address</label><label class="w-radio"><input type="radio" data-name="Radio" id="radio" name="radio" class="w-form-formradioinput form-radio w-radio-input" value="Radio"><span class="w-form-label" for="radio">Radio</span></label><input type="submit" data-wait="Please wait..." class="button form-submit w-button" value="Submit"></form>
             <div class="w-form-done">
               <div>Thank you! Your submission has been received!</div>
             </div>
