--- a/experimental-pages/interactive-custom-avatars.html
+++ b/experimental-pages/interactive-custom-avatars.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Dec 20 2023 02:24:08 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65737ff1c7e5cad5067776dc" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -42,7 +42,7 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
-                    <a href="https://resonite.com/policies/" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
               </li>
@@ -56,7 +56,7 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
-                    <a href="https://discord.gg/Jm4nsEGq" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
@@ -83,6 +83,9 @@
               <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
+              <li>
+                <a href="http://resonite.com/Resonite_PressKit_121923.zip" class="nav-link">Press Kit</a>
+              </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
               </li>
@@ -93,11 +96,15 @@
       </div>
     </div>
   </div>
-  <div class="div-block-intavt-2">
-    <div data-w-id="acef9033-7a9d-1635-26bb-bdf5edc1745a" style="opacity:0" class="w-layout-hflex flex-block-13-copy">
-      <div class="w-layout-vflex flex-block-14"></div>
-    </div>
+  <div class="div-block-11"></div>
+  <div class="div-block-12">
+    <div class="w-layout-hflex flex-block-26"><img src="../images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="100vw" srcset="../images/Protoflux_Logo_Color_1080-p-500.png 500w, ../images/Protoflux_Logo_Color_1080-p-800.png 800w, ../images/Protoflux_Logo_Color_1080-p-1080.png 1080w, ../images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-5"></div><img src="../images/pngtree-fire-explosion-blast-flame-png-transparent-png-image_946470.jpg" loading="lazy" style="opacity:0" data-w-id="6a96463d-b684-1d59-6f9c-2e5972aac648" alt="" class="image-6"><img src="../images/pngtree-fire-explosion-blast-flame-png-transparent-png-image_946470.jpg" loading="lazy" style="opacity:0" data-w-id="e23ecf36-82a5-7ce4-421f-0014328b0295" alt="" class="image-6-copy">
   </div>
+  <section class="section-2">
+    <div class="w-layout-blockcontainer container-17 w-container">
+      <div class="w-layout-blockcontainer container-16 w-container"></div>
+    </div>
+  </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=656504e52e383d09efa776a6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
 </body>
