--- a/case-studies.html
+++ b/case-studies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -42,13 +42,12 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" aria-current="page" class="nav-dropdown-link w-dropdown-link w--current">Case Studies</a>
-                    <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-dropdown-link w-dropdown-link">Wiki</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
               </li>
               <li>
-                <a href="https://status.yellowdogman.com/" target="_blank" class="nav-link">Service Status</a>
+                <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-link">Wiki</a>
               </li>
               <li>
                 <div data-hover="false" data-delay="0" class="nav-dropdown w-dropdown">
@@ -78,6 +77,7 @@
                     <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
                     <a href="https://moderation.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Moderation Ticket</a>
                     <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" target="_blank" class="nav-dropdown-link w-dropdown-link">Github</a>
+                    <a href="https://status.yellowdogman.com/" target="_blank" class="nav-dropdown-link w-dropdown-link">Service Status</a>
                   </nav>
                 </div>
               </li>
@@ -106,7 +106,7 @@
           <p class="paragraph-2">Resonite’s technology makes it not just easy to stream live content, but also gives the ability to create versatile and interactive productions. Tweak your stage on the fly, have a team off camera control lighting and cameras, pipe in audience chat commands to trigger events in your session. The possibilities are endless!</p>
           <a href="case-studies/live-production.html" class="button-primary w-button">Learn More</a>
         </div>
-        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/The-6th-Annual-VR-Awards-p-500.jpg 500w, images/The-6th-Annual-VR-Awards-p-800.jpg 800w, images/The-6th-Annual-VR-Awards-p-1080.jpg 1080w, images/The-6th-Annual-VR-Awards-p-1600.jpg 1600w, images/The-6th-Annual-VR-Awards-p-2000.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="100vw" srcset="images/The-6th-Annual-VR-Awards-p-500.jpg 500w, images/The-6th-Annual-VR-Awards-p-800.jpg 800w, images/The-6th-Annual-VR-Awards-p-1080.jpg 1080w, images/The-6th-Annual-VR-Awards-p-1600.jpg 1600w, images/The-6th-Annual-VR-Awards-p-2000.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
