--- a/features.html
+++ b/features.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Jan 15 2024 22:45:04 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6565266954e064f8c40d89ac" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 991px) 159px, 16vw" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -42,13 +42,12 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="features.html" aria-current="page" class="nav-dropdown-link w-dropdown-link w--current">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
-                    <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-dropdown-link w-dropdown-link">Wiki</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
                   </nav>
                 </div>
               </li>
               <li>
-                <a href="https://status.yellowdogman.com/" target="_blank" class="nav-link">Service Status</a>
+                <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-link">Wiki</a>
               </li>
               <li>
                 <div data-hover="false" data-delay="0" class="nav-dropdown w-dropdown">
@@ -78,6 +77,7 @@
                     <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
                     <a href="https://moderation.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Moderation Ticket</a>
                     <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" target="_blank" class="nav-dropdown-link w-dropdown-link">Github</a>
+                    <a href="https://status.yellowdogman.com/" target="_blank" class="nav-dropdown-link w-dropdown-link">Service Status</a>
                   </nav>
                 </div>
               </li>
@@ -113,9 +113,9 @@
         <div class="hero-split">
           <h2 class="heading-3">Collaborative Creation Tools</h2>
           <p class="margin-bottom-24px">Resonite provides users an array of development tools that can be used alongside others in your session! Create custom avatars, interactive props, worlds, experiences, and much more! (While possible, we typically advise against deleting all of existence.)</p>
-          <a data-w-id="6e1a2e36-b7b7-56ad-bfc8-d49eb7d87332" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
+          <a href="features/features-creationtools.html" class="button-primary-copy w-button">Learn More</a>
         </div>
-        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="100vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/Features_CollaborativeCreationTools_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_CollaborativeCreationTools_01-p-500.jpg 500w, images/Features_CollaborativeCreationTools_01-p-800.jpg 800w, images/Features_CollaborativeCreationTools_01-p-1080.jpg 1080w, images/Features_CollaborativeCreationTools_01-p-1600.jpg 1600w, images/Features_CollaborativeCreationTools_01-p-2000.jpg 2000w, images/Features_CollaborativeCreationTools_01.jpg 2560w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
@@ -131,7 +131,7 @@
   <section class="hero-heading-right-3-copy-2">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Protoflux_Logo_Color_1080-p-500.png 500w, images/Protoflux_Logo_Color_1080-p-800.png 800w, images/Protoflux_Logo_Color_1080-p-1080.png 1080w, images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-3"></div>
+        <div class="hero-split"><img src="images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Protoflux_Logo_Color_1080-p-500.png 500w, images/Protoflux_Logo_Color_1080-p-800.png 800w, images/Protoflux_Logo_Color_1080-p-1080.png 1080w, images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-3"></div>
         <div class="hero-split">
           <h2 class="heading-4">Visual Scripting</h2>
           <p class="margin-bottom-24px-copy">ProtoFlux is the crown jewel of our creative tools - the most powerful visual programming language that our experienced team has designed to date, which lets you quickly prototype and build anything from simple interactions to complex games and systems - with full real-time collaboration support and immediate feedback. Build anything from avatar and world interactivity, to complex systems, and games.</p>
@@ -154,7 +154,7 @@
   <section class="hero-heading-right-3">
     <div class="container-2">
       <div class="hero-wrapper-2">
-        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-3"></div>
+        <div class="hero-split"><img src="images/Features_ContentSharing_01.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/Features_ContentSharing_01-p-500.jpg 500w, images/Features_ContentSharing_01-p-800.jpg 800w, images/Features_ContentSharing_01-p-1080.jpg 1080w, images/Features_ContentSharing_01-p-1600.jpg 1600w, images/Features_ContentSharing_01.jpg 1920w" alt="" class="shadow-two-3"></div>
         <div class="hero-split">
           <h2 class="heading-4">Content Sharing</h2>
           <p class="margin-bottom-24px-copy">Browse your own and others content! Save others (with proper permissions) and your own creations. Upload files directly from your local files into a session, view and modify it with others!</p>
@@ -180,7 +180,7 @@
           <p class="margin-bottom-24px">Resonite allows you to share, build, and collect interactive custom avatars! (Legs included.)</p>
           <a data-w-id="24bc94ad-e60b-4c67-4cd0-13a1a103e402" style="opacity:0" href="https://resonite.com/404.html" class="button-primary-copy-under-construction w-button">Coming Soon</a>
         </div>
-        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="100vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/2023-11-10-00.56.08.jpg" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 92vw, 43vw" srcset="images/2023-11-10-00.56.08-p-500.jpg 500w, images/2023-11-10-00.56.08-p-800.jpg 800w, images/2023-11-10-00.56.08-p-1080.jpg 1080w, images/2023-11-10-00.56.08-p-1600.jpg 1600w, images/2023-11-10-00.56.08-p-2000.jpg 2000w, images/2023-11-10-00.56.08-p-2600.jpg 2600w, images/2023-11-10-00.56.08-p-3200.jpg 3200w, images/2023-11-10-00.56.08.jpg 3840w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
