--- a/policies/Guidelines.html
+++ b/policies/Guidelines.html
@@ -61,7 +61,7 @@
 
         <p>Adult content is content that should not be accessed by, shown to, or otherwise distributed to anyone under the age of 18. Content of this type is any content that is or contains: genitalia, sexually explicit avatars or objects, pornography, or sexually explicit activity.</p>
 
-        <p>Situations that allow such content must fit all listed criteria:</p>
+        <p>Sexually explicit content and activity, including kink or fetish related activity is only permitted in sessions that fit the following listed criteria:</p>
 
         <ul>
             <li>Within sessions that are set to private, or set to contacts if your contacts list is curated to exclude minors and those not consenting to see adult content, or within a headless session that’s set to private or contacts with a contacts list that is curated as stated prior.</li>
