--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -15,6 +15,12 @@
         <h1>Policy Changelog</h1>
         <p>For transparency, a list of changes to our polices are presented here.</p>
         <section>
+            <h2>February 14th 2024 - User Guidelines</h2>
+            <p>We have made a small wording tweak to our user guidelines, in order to provide additional clarity on our adult content guidelines. The changed text is displayed below, but can also be reviewed on <a href="https://github.com/Yellow-Dog-Man/Resonite-Website/blob/main/policies/Guidelines.html">GitHub</a>.</p>
+
+            <p>Sexually explicit content <strong></strong>and activity, including kink or fetish related activity</strong> is only permitted in sessions that fit the following listed criteria:</p>
+        </section>
+        <section>
             <h2>18th October 2023 - Terms of Service</h2>
             <p>We've updated the language in our Terms of Service in section 2 Intellectual Property rights. We've removed some language relating to the license grants on contents:</p>
             <ul>
