--- a/case-studies.html
+++ b/case-studies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 25 2024 21:33:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656539d3fe23ca7ddda57eb1" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -43,6 +43,7 @@
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" aria-current="page" class="nav-dropdown-link w-dropdown-link w--current">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
@@ -106,7 +107,7 @@
           <p class="paragraph-2">Resonite’s technology makes it not just easy to stream live content, but also gives the ability to create versatile and interactive productions. Tweak your stage on the fly, have a team off camera control lighting and cameras, pipe in audience chat commands to trigger events in your session. The possibilities are endless!</p>
           <a href="case-studies/live-production.html" class="button-primary w-button">Learn More</a>
         </div>
-        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="100vw" srcset="images/The-6th-Annual-VR-Awards-p-500.jpg 500w, images/The-6th-Annual-VR-Awards-p-800.jpg 800w, images/The-6th-Annual-VR-Awards-p-1080.jpg 1080w, images/The-6th-Annual-VR-Awards-p-1600.jpg 1600w, images/The-6th-Annual-VR-Awards-p-2000.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
+        <div class="hero-split"><img src="images/The-6th-Annual-VR-Awards.jpg" loading="lazy" sizes="(max-width: 767px) 94vw, (max-width: 991px) 92vw, 43vw" srcset="images/The-6th-Annual-VR-Awards-p-500.jpg 500w, images/The-6th-Annual-VR-Awards-p-800.jpg 800w, images/The-6th-Annual-VR-Awards-p-1080.jpg 1080w, images/The-6th-Annual-VR-Awards-p-1600.jpg 1600w, images/The-6th-Annual-VR-Awards-p-2000.jpg 2000w, images/The-6th-Annual-VR-Awards.jpg 2048w" alt="" class="shadow-two"></div>
       </div>
     </div>
   </section>
