--- a/experimental-pages/events.html
+++ b/experimental-pages/events.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 25 2024 21:33:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6566443c608f72df7c7e4c69" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, 158.99305725097656px" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -42,11 +42,13 @@
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
+                    <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="../licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
               <li>
-                <a href="https://status.yellowdogman.com/" target="_blank" class="nav-link">Service Status</a>
+                <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-link">Wiki</a>
               </li>
               <li>
                 <div data-hover="false" data-delay="0" class="nav-dropdown w-dropdown">
@@ -55,10 +57,12 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
+                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
                     <a href="https://www.tiktok.com/@resoniteofficial" target="_blank" class="nav-dropdown-link w-dropdown-link">TikTok</a>
-                    <a href="https://mastodon.social/@Resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Mastadon</a>
+                    <a href="https://mastodon.social/@Resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Mastodon</a>
                     <a href="https://bsky.app/profile/resonite.com" target="_blank" class="nav-dropdown-link w-dropdown-link">Bluesky</a>
                   </nav>
                 </div>
@@ -71,13 +75,21 @@
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
                     <a href="https://support.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Support Ticket</a>
-                    <a href="#" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
+                    <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
                     <a href="https://moderation.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Moderation Ticket</a>
+                    <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" target="_blank" class="nav-dropdown-link w-dropdown-link">Github</a>
+                    <a href="https://status.yellowdogman.com/" target="_blank" class="nav-dropdown-link w-dropdown-link">Service Status</a>
                   </nav>
                 </div>
               </li>
               <li>
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
+              </li>
+              <li>
+                <a href="http://resonite.com/Resonite_PressKit_121923.zip" class="nav-link">Press Kit</a>
+              </li>
+              <li class="list-item-2">
+                <a href="https://store.steampowered.com/app/2519830/Resonite/" class="button-6 w-button">Download</a>
               </li>
             </ul>
           </nav>
@@ -100,22 +112,22 @@
           <div class="w-layout-vflex event-wrapper">
             <div class="w-layout-hflex top-wrapper">
               <div class="w-layout-vflex date-and-day-wrapper">
-                <div class="text-block-10"></div>
-                <div class="text-block-11"></div>
+                <div class="text-block-10 w-dyn-bind-empty"></div>
+                <div class="text-block-11 w-dyn-bind-empty"></div>
               </div>
               <div class="w-layout-vflex flex-block-4"></div>
               <div class="w-layout-vflex event-information-wrapper">
-                <div class="event-name"></div>
-                <div class="event-date"></div>
-                <div class="event-time"></div>
+                <div class="event-name w-dyn-bind-empty"></div>
+                <div class="event-date w-dyn-bind-empty"></div>
+                <div class="event-time w-dyn-bind-empty"></div>
               </div>
             </div>
             <div class="w-layout-hflex horizontal-divider-wrapper"></div>
-            <div class="event-link"></div><img alt="" loading="lazy" src="" class="image">
+            <div class="event-link w-dyn-bind-empty"></div><img alt="" loading="lazy" src="" class="image w-dyn-bind-empty">
             <div class="button-wrapper">
               <div class="w-layout-hflex">
                 <div class="w-layout-hflex flex-block-6">
-                  <div class="text-block-14"></div>
+                  <div class="text-block-14 w-dyn-bind-empty"></div>
                 </div>
                 <a href="#" class="button-3 w-button">Host Link</a>
               </div>
