--- a/experimental-pages/interactive-custom-avatars.html
+++ b/experimental-pages/interactive-custom-avatars.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 25 2024 21:33:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65737ff1c7e5cad5067776dc" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 15vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -43,11 +43,12 @@
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="../licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
               <li>
-                <a href="https://status.yellowdogman.com/" target="_blank" class="nav-link">Service Status</a>
+                <a href="https://wiki.resonite.com/Main_Page" target="_blank" class="nav-link">Wiki</a>
               </li>
               <li>
                 <div data-hover="false" data-delay="0" class="nav-dropdown w-dropdown">
@@ -77,6 +78,7 @@
                     <a href="https://resonite.com/policies/Guidelines.html" class="nav-dropdown-link w-dropdown-link">Moderation Guidelines</a>
                     <a href="https://moderation.resonite.com/open.php" target="_blank" class="nav-dropdown-link w-dropdown-link">Submit Moderation Ticket</a>
                     <a href="https://github.com/Yellow-Dog-Man/Resonite-Issues" target="_blank" class="nav-dropdown-link w-dropdown-link">Github</a>
+                    <a href="https://status.yellowdogman.com/" target="_blank" class="nav-dropdown-link w-dropdown-link">Service Status</a>
                   </nav>
                 </div>
               </li>
@@ -98,7 +100,7 @@
   </div>
   <div class="div-block-11"></div>
   <div class="div-block-12">
-    <div class="w-layout-hflex flex-block-26"><img src="../images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="100vw" srcset="../images/Protoflux_Logo_Color_1080-p-500.png 500w, ../images/Protoflux_Logo_Color_1080-p-800.png 800w, ../images/Protoflux_Logo_Color_1080-p-1080.png 1080w, ../images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-5"></div><img src="../images/pngtree-fire-explosion-blast-flame-png-transparent-png-image_946470.jpg" loading="lazy" style="opacity:0" data-w-id="6a96463d-b684-1d59-6f9c-2e5972aac648" alt="" class="image-6"><img src="../images/pngtree-fire-explosion-blast-flame-png-transparent-png-image_946470.jpg" loading="lazy" style="opacity:0" data-w-id="e23ecf36-82a5-7ce4-421f-0014328b0295" alt="" class="image-6-copy">
+    <div class="w-layout-hflex flex-block-26"><img src="../images/Protoflux_Logo_Color_1080.png" loading="lazy" sizes="(max-width: 1081px) 100vw, 1081px" srcset="../images/Protoflux_Logo_Color_1080-p-500.png 500w, ../images/Protoflux_Logo_Color_1080-p-800.png 800w, ../images/Protoflux_Logo_Color_1080-p-1080.png 1080w, ../images/Protoflux_Logo_Color_1080.png 1081w" alt="" class="image-5"></div><img src="../images/pngtree-fire-explosion-blast-flame-png-transparent-png-image_946470.jpg" loading="lazy" style="opacity:0" data-w-id="6a96463d-b684-1d59-6f9c-2e5972aac648" alt="" class="image-6"><img src="../images/pngtree-fire-explosion-blast-flame-png-transparent-png-image_946470.jpg" loading="lazy" style="opacity:0" data-w-id="e23ecf36-82a5-7ce4-421f-0014328b0295" alt="" class="image-6-copy">
   </div>
   <section class="section-2">
     <div class="w-layout-blockcontainer container-17 w-container">
