--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 25 2024 21:33:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -41,6 +41,7 @@
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
