--- a/features/features-creationtools.html
+++ b/features/features-creationtools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Jan 19 2024 20:13:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Mar 25 2024 21:33:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65a98f2260c42b2b73a28f91" data-wf-site="656504e52e383d09efa776a6">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 991px) 159px, 16vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="../images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 63vw, (max-width: 767px) 159px, (max-width: 991px) 21vw, 16vw" alt="" srcset="../images/RSN_Logo_Color_1080-p-500.png 500w, ../images/RSN_Logo_Color_1080-p-800.png 800w, ../images/RSN_Logo_Color_1080-p-1080.png 1080w, ../images/RSN_Logo_Color_1080.png 1081w"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -43,6 +43,7 @@
                     <a href="../features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="../case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
+                    <a href="../licensing.html" target="_blank" class="nav-dropdown-link w-dropdown-link">Licensing</a>
                   </nav>
                 </div>
               </li>
